# OVR

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: Develop.yml  Main.yml  Release.yml  rust.yml
benches/: _.rs
container/: Dockerfile-binary-image-dev  Dockerfile-binary-image-release  Dockerfile-binary-rust-base  Dockerfile-goleveldb  docker-entrypoint-ovrd.sh
src/: lib.rs
src/bins/: ovr.rs
src/bins/ovr/: client.rs  daemon.rs  dev.rs  main.rs  snapshot.rs
src/bins/ovrd/: daemon.rs  main.rs  pack.rs
src/cfg/: mod.rs
src/common/: mod.rs
src/consensus/: mod.rs
src/ethvm/: mod.rs
src/ethvm/impls/: backend.rs  mod.rs  stack.rs
src/ethvm/precompile/: mod.rs
src/ethvm/precompile/token/: mod.rs
src/ethvm/tx/: mod.rs
src/ethvm/tx/meta_tokens/: mod.rs
src/ethvm/tx/token/: mod.rs
src/ledger/: mod.rs
src/ledger/staking/: mod.rs
src/rpc/: error.rs  eth.rs  mod.rs  net.rs  server.rs  utils.rs  web3.rs
src/tx/: mod.rs
src/tx/native/: mod.rs
tests/: _.rs  evm.rs  evm_test.rs
tests/contracts/: token.sol  token_abi.json  token_bytecode.txt
tests/utils/: erc20.rs  mock.rs  mod.rs  solidity.rs  unsigned_tx.rs
tools/: create_prod_env.sh  download_tendermint.sh  fmt.sh
