[package]
name = "ovr"
version = "0.2.1"
edition = "2021"
authors = ["OVR development team", "fanhui.x@gmail.com"]
description = "Official implementations of the Overeality project."
homepage = "https://github.com/ccmlm/OVR"
repository = "https://github.com/ccmlm/OVR"
keywords = ["blockchain", "defi", "state"]
license = "MIT"

[[bin]]
name = "ovr"
path = "src/bins/ovr/main.rs"

[dependencies]
ruc = { version = "1.0.4", features = ["cmd"] }
btm = "0.6.1"
vsdb = "0.14.8"

clap = { version = "3.0.13", features = ["derive"] }
nix = "0.23.1"
ctrlc = "3.2.1"
toml_edit = "0.13.4"
rand = "0.8.5"
once_cell = "1.9.0"
parking_lot = "0.11.2"

serde_json = "1.0.76"
serde = { version = "1.0.134", features = ["derive"] }

tokio = { version =  "1.16.1", features = ["full"] }

tendermint = "0.23.5"
tendermint-config = "0.23.5"
abci = { package = "tendermint-abci", version = "0.23.5" }
tmtypes = { package = "tendermint-proto", version = "0.23.5" }

rlp = "0.5.1"
sha3 = "0.10.0"
slices = "0.2.0"
sp-io = "4.0.0"
num_enum = "0.5.6"

jsonrpc-http-server = "18.0"
jsonrpc-ws-server = "18.0"
jsonrpc-pubsub = "18.0"
jsonrpc-core-client = "18.0"
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"

evm = { version = "0.33.1", default-features = false, features = ["with-serde"] }
ethereum = { version =  "0.11.1", default-features = false, features = ["with-serde"] }
primitive-types = { version = "0.10.1", default-features = false, features = ["rlp", "byteorder", "serde"] }

fevm = { package = "pallet-evm", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-blake2 = { package = "pallet-evm-precompile-blake2", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-bn128 = { package = "pallet-evm-precompile-bn128", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-curve25519 = { package = "pallet-evm-precompile-curve25519", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-ed25519 = { package = "pallet-evm-precompile-ed25519", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-modexp = { package = "pallet-evm-precompile-modexp", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-sha3fips = { package = "pallet-evm-precompile-sha3fips", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
fevm-precompile-simple = { package = "pallet-evm-precompile-simple", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }
# fevm-precompile-dispatch = { package = "pallet-evm-precompile-dispatch", git = "https://github.com/ccmlm/frontier", tag = "ovr-p1" }

precompile-utils = { git = "https://github.com/ccmlm/precompile_utils.git" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"]}

[[bench]]
name = "_"
harness = false

[profile.dev]
incremental = false
overflow-checks = true

[profile.release]
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
codegen-units = 1
incremental = false
overflow-checks = false
